src/assets/styles/dropdown-reg.scss
.reg {
	&__root {
		height: 44px;
		border-radius: 8px;
		border: 1px solid #bfc5cd;
		background-color: transparent;
		display: flex;
		align-items: center;
		justify-content: space-between;
		gap: 10px;
		padding: 0 16px 0 145px;
		cursor: pointer;
		@media only screen and (max-width: 1023px) and (min-width: 744px) {
			padding: 0 16px;
		}
		@media only screen and (max-width: 743px) and (min-width: 430px) {
			padding: 0 16px;
		}
		@media only screen and (max-width: 429px) and (min-width: 320px) {
			padding: 0 16px;
		}
	}

	&__wrapper {
		overflow: auto;
		max-height: 220px;
	}

	&__trigger {
		display: flex;
		align-items: center;
		justify-content: center;
		background-image: url("/icons/arrow-down-date.svg");
		width: 20px;
		height: 20px;
	}

	&__panel {
		border-radius: 10px;
		margin-top: 4px;
		background-color: #fff;
		box-shadow: 0px 6px 32px 0px rgba(0, 0, 0, 0.05);
	}

	&__item {
		display: flex;
		align-items: center;
		height: 44px;
		padding: 0 12px;
		color: #091c31;
		font-size: 13px;
		line-height: 20px;
		letter-spacing: 0.22px;
		cursor: pointer;

		&:hover {
			background-color: #eee;
			border-radius: 6px;
		}
	}

	&__input {
		border: none;
		outline: none;
		color: #091c31;
		font-size: 15px;
		line-height: 22px;
	}
}

.dark .reg {
	&__root {
		border: 1px solid #3c5a7b;
	}

	&__panel {
		background-color: #122a45;
		box-shadow: none;
	}

	&__trigger {
		background-image: url("/icons/arrow-down-date-dark.svg");
	}

	&__input {
		color: #eee;
	}

	&__item {
		color: #eee;

		&:hover {
			background-color: #1b395b;
		}
	}
}

